fix javadoc issue; continue with tests